--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 
   <div class="recipes xs-px1 xs-mt2">
     <div class="clearfix">
-    {% assign sorted = site.recipes | concatenate site.components | sort:"date" %}
+    {% assign sorted = site.recipes | sort:"date" %}
     {% for post in sorted %}
 
       <div class="sm-col sm-col-6 md-col-6 lg-col-4 xs-px1 xs-mb2">
